--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,14 @@ trust-dns-resolver = "0.22"                           # DNS resolution
 rustfft = "6.1"                                 # Fast Fourier Transform
 num-complex = "0.4"                             # Complex number support
 nalgebra = "0.32"                               # Linear algebra
-rand = "0.8"                                    # Random number generation
+rand = { version = "0.8", features = ["std", "std_rng"] } # Random number generation
+rand_distr = "0.4"                              # Random number distributions
+
+# Hardware and system integration
+serialport = "4.2"                              # Serial port communication
+chrono = "0.4"                                  # Date and time handling
+libc = "0.2"                                    # System bindings
+nix = { version = "0.26", features = ["ioctl", "socket", "time"] } # Unix APIs
 
 # Error handling and utilities
 thiserror = "1.0"                               # Error handling
