--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ '*' ]  # Run on all branch pushes
   pull_request:
-    branches: [ main ]
+    branches: [ '*' ]  # Run on PRs to any branch
 
 env:
   CARGO_TERM_COLOR: always
